--- a/Deneme_proje/Views/Fatura/IsEmirleri.cshtml
+++ b/Deneme_proje/Views/Fatura/IsEmirleri.cshtml
@@ -27,11 +27,11 @@
                                 Üret
                             </button>
 
-                            <button onclick="tuketimModalAc('@isEmri.is_Kod', '@isEmri.UrunKodu')"
+                          @*   <button onclick="tuketimModalAc('@isEmri.is_Kod', '@isEmri.UrunKodu')"
                                     class="btn tuket @(isEmri.is_EmriDurumu == 1 ? "" : "darker")"
                                     style="margin-left: 10px;">
                                 Tüket
-                            </button>
+                            </button> *@
                         }
                     </div>
                 </div>
